@@ -38,16 +38,6 @@ The target must be a mobile npc mob, and must be the same racial category, and o
 a similar alignment.  The bard suffers penalties for trying to befriend mobs of \
 higher or lower levels, though only 10% higher levels are forbidden entirely.
 
-SETDECOYS=THIEF_SETDECOYS
-THIEF_SETDECOYS=<ABILITY>\
-Usage    : SETDECOYS\n\r\
-Example  : setdecoys\n\r\
-This skill sets a series of decoys that, during the heat of combat, will fool the \
-thiefs opponents into thinking that he or she is actually where the decoy is.  \
-The victim is fooled into running towards the decoy until they realize their mistake.  This \
-has the effect of putting the victim at a distant range from the thief for a time.  After \
-the trap is set, the decoys will begin popping up every so often for a duration.
-
 PALADIN_ABIDINGAURA=PALADIN_ABIDING_AURA
 ABIDING_AURA=PALADIN_ABIDING_AURA
 PALADIN_ABIDING_AURA=<ABILITY>\
@@ -2084,6 +2074,16 @@ The ranger carefully sets a snare on the outdoor room, tripping up and \
 binding anyone who runs into it.   Snares will be permanent on owned \
 property.
 
+SETDECOYS=THIEF_SETDECOYS
+THIEF_SETDECOYS=<ABILITY>\
+Usage    : SETDECOYS\n\r\
+Example  : setdecoys\n\r\
+This skill sets a series of decoys that, during the heat of combat, will fool the \
+thiefs opponents into thinking that he or she is actually where the decoy is.  \
+The victim is fooled into running towards the decoy until they realize their mistake.  This \
+has the effect of putting the victim at a distant range from the thief for a time.  After \
+the trap is set, the decoys will begin popping up every so often for a duration.
+
 SLICKCALTROPS=THIEF_SLICKCALTROPS
 THIEF_SLICKCALTROPS=<ABILITY>\
 Usage    : SLICK CALTROPS\n\r\
@@ -2217,6 +2217,23 @@ Usage    : SURRENDER\n\r\
 Example  : surrender\n\r\
 A unique thief skills which allows him or her to toss shiny coins at his \
 opponents for allowing the thief to leave combat without losing experience.
+
+SUPERSTITIOUS=<ABILITY>\
+Usage    : SUPERSTITIOUS [PHRASE TO SAY]\n\r\
+Example  : superstitious i am the most awesome pirate in the whole wide world!\n\r\
+This skill reflects the superstitious nature of the character.  Once the superstition \
+is set up in the character's mind, the character must perform the superstition once per \
+day to receive a bonus to skills and combat ability.  Failing to perform the \
+superstition once per day will give an equal negative to skills and combat ability. \
+Superstitious does not affect the character until it is intentionally set up the first \
+time.  Afterward it is set, it will always affect the character, either \
+positively, or negatively. To set up the superstition, the character needs to be wearing \
+at least 3 items of armor, and then invoke the command with some phrase that the \
+character will need to say to become lucky.  The phrase can be anything, but needs to \
+have at least 5 words and be at least 30 characters long.  Once the superstitition \
+is set up, invoking the command in the future will remind the character about the \
+phrase and the item of armor they must wear whenever saying the phrase to satisfy \
+the superstition.
 
 SWEEP=<ABILITY>\
 Usage    : SWEEP\n\r\
